refactor: customized exceptions